@@ -7,6 +7,7 @@ Version 1.0.3 to be released
 - Bug #127: CUploadedFile is using an undefined variable (Qiang)
 - Bug #132: CMysqlSchema has a typo (Qiang)
 - Bug: CHttpRequest.hostInfo may give wrong port number (Qiang)
+- Bug: CHtml::activeListBox does not work when multiple selection is needed (Qiang)
 - New: Upgraded jquery to 1.3.1 (Qiang)
 - New: Upgraded jquery star rating to 2.61 (Qiang)
 - New: Added skeleton application and refactored 'yiic webapp' command (Qiang)
